<resources>
    <string name="app_name">Movies App</string>

    <!--  HOME  -->
    <string name="button_home">home</string>
    <string name="skillcinema">Skillcinema</string>
    <string name="arrow_right">Стрелка вправо</string>
    <string name="premier">Премьеры</string>
    <string name="everyone">Все</string>
    <string name="rating">5.0</string>
    <string name="popular">Популярное</string>
    <string name="top_250">Топ-250</string>
    <string name="dynamic_selection">Динамическая подборка</string>
    <string name="tv_serials">Сериалы</string>

    <!--  SEARCH  -->
    <string name="button_search">search</string>
    <string name="title_search">SEARCH</string>

    <!--  PROFILE  -->
    <string name="button_profile">profile</string>
    <string name="title_profile">PROFILE</string>

    <!--  FILM  -->
    <string name="description_poster">poster</string>
    <string name="text_cast_of_the_film">В фильме снимались</string>
    <string name="text_staff_of_the_film">Над фильмом работали</string>
    <string name="gallery">Галерея</string>

    <!--  ACTOR  -->
    <string name="describe_icon_back_button">Icon back button</string>
    <string name="describe_photo">Photo</string>
    <string name="describe_dialog_full_screen_image">Full Screen Image</string>
    <string name="best">Лучшее</string>

    <!--  ACTOR  -->
    <string name="describe_icon_back_button">Icon back button</string>
    <string name="describe_photo">Photo</string>
    <string name="describe_dialog_full_screen_image">Full Screen Image</string>
    <string name="best">Лучшее</string>

</resources>