<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".presentation.fragments.HomePageFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/title_skillcinema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="66dp"
            android:contentDescription="@string/skillcinema"
            android:src="@drawable/skillcinema_title" />

        <!-- premieres-->
        <com.examples.moviesapp.presentation.custom_layouts.MovieBlockLayout
            android:id="@+id/premieres_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="57dp"
            app:block_additional_text="@string/everyone"
            app:block_main_text="@string/premier" />

        <!-- popular-->
        <com.examples.moviesapp.presentation.custom_layouts.MovieBlockLayout
            android:id="@+id/popular_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="57dp"
            app:block_additional_text="@string/everyone"
            app:block_main_text="@string/popular" />

    </LinearLayout>
</ScrollView>